@@ -19,6 +19,9 @@
      add the streamlocal* options to ssh's -o list; millert says they're
      irrelevant for scp/sftp;
      ok markus millert
+   - djm@cvs.openbsd.org 2014/07/17 00:10:56
+     [sandbox-systrace.c]
+     ifdef SYS_sendsyslog so this will compile without patching on -stable
 
 20140717
  - (djm) [digest-openssl.c] Preserve array order when disabling digests.
